# lotusd

./: CMakeLists.txt  CONTRIBUTING.md  COVENANT_QUICK_REFERENCE.md  COVENANT_TOKEN_IMPLEMENTATION.md  COVENANT_TOKEN_SUCCESS.md  DEPLOYMENT_STATUS.md  DISCLOSURE_POLICY.md  Dockerfile  FULL_COVENANT_IMPLEMENTATION.md  FULL_TURING_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PROMPT_FOR_SMARTPHONE_APP.md  README.md  TESTNET_FORK_README.md  TURING_COMPLETE_ANALYSIS.md  docker-compose.yml  test_covenant_locally.sh
.github/workflows/: README.md  lotus-core-build.yml  lotus-gui-build.yml  lotus-main-ci.yml  lotus-miner-build.yml  lotus-node-build.yml  lotus-node-ci.yml  lotus-release.yml  lotus-tools-build.yml  lotus-version-management.yml  lotus-version-revert.yml  notify-telegram.yml
contrib/aur/lotus-qt/: PKGBUILD
contrib/devtools/: symbol-check.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/seeds/: makeseeds.py  nodes_main.txt
contrib/teamcity/: gitian.sh
contrib/utils/: install-dependencies.sh
doc/: nng.md  testnet-version-filtering.md
doc/upgrades/: 2025-winter-solstice.md  2026-summer-solstice.md
dockerfiles/: Dockerfile.lotus-cli  Dockerfile.lotus-gpu-miner  Dockerfile.lotus-gpu-miner-amd  Dockerfile.lotus-node  Dockerfile.lotus-qt  Dockerfile.lotus-seeder  Dockerfile.lotus-tx  Dockerfile.lotus-wallet  Dockerfile.lotusd
gpuminer/: Cargo.toml  Dockerfile  GENESIS_MINING_README.md  README.md  oneclick-gpu-mining-setup.sh
gpuminer/kernels/: lotus_og.cl
gpuminer/lotus-miner-cli/: Cargo.toml
gpuminer/lotus-miner-cli/src/: main.rs
gpuminer/lotus-miner-lib/: Cargo.toml
src/: .clang-tidy  CMakeLists.txt  addrman.cpp  blockdb.cpp  cashaddrenc.cpp  chainparams.cpp  chainparamsseeds.h  coins.cpp  coins.h  httpexplorer.cpp  httpexplorer.h  init.cpp  key_io.cpp  logging.h  miner.cpp  minerfund.cpp  mockblockgen.cpp  mockblockgen.h  mocktxgen.cpp  mocktxgen.h  net_processing.cpp  tinyformat.h  txdb.cpp  txmempool.cpp  validation.cpp  validation.h  validation_scope.h  versionfilter.cpp  versionfilter.h
src/addresses/: xaddress.cpp  xaddress.h
src/consensus/: activation.cpp  activation.h  addresses.h  consensus.h  covenant.cpp  covenant.h  params.h  tx_verify.cpp
src/httpserver/: embed_resources.cmake  explorer.css  explorer.html  explorer.js
src/nng_interface/: CMakeLists.txt  nng_interface.cpp  nng_interface.fbs  nng_interface.h
src/node/: transaction.cpp
src/policy/: policy.h
src/rpc/: covenanttoken.cpp  mining.cpp  misc.cpp  register.h  util.cpp
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  standard.cpp  standard.h
src/seeder/: options.cpp  options.h
src/support/: lockedpool.cpp
src/test/: cashaddrenc_tests.cpp
src/util/: bip32.h  string.h
src/wallet/: CMakeLists.txt  rpcwallet.cpp  scriptpubkeyman.cpp  wallet.cpp  wallet.h  wallet_tx_cleanup.cpp
test/functional/: interface_nng.py  logos_feature_minerfund_activation.py
(+10 files in other folders)
